Header, Body, Footer aufgeteilt

--- a/index.html
+++ b/index.html
@@ -6,15 +6,48 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
-    <script defer src="script.ts"></script>
-    <title>Hello World Portfolio</title>
+    <script defer src="script.js"></script>
+    <title>Portfolio Robin Galeazzi</title>
 </head>
 
 <body>
-    <div id="greeting"></div>
-        <div>Hello Portfolio</div>
+    <div class="page-container">
+        <header class="site-header">
+            <div class="container">
+                <div class="logo">
+                    Portfolio Robin Galeazzi
+                </div>
+                <nav>
+                    <ul>
+                        <li><a href="#">Home</a></li>
+                        <li><a href="#">About</a></li>
+                        <li><a href="#">Projects</a></li>
+                        <li><a href="#">Contact</a></li>
+                    </ul>
+                </nav>
+            </div>
+        </header>
 
-    <div></div>
+        <div class="main-content">
+            <div id="greeting"></div>
+            <div>Hello Portfolio</div>
+        </div>
+
+        <footer class="site-footer">
+            <div class="container">
+                <div class="footer-text">
+                    &copy; 2023 Portfolio Robin Galeazzi
+                </div>
+                <nav>
+                    <ul>
+                        <li><a href="#">Terms of Service</a></li>
+                        <li><a href="#">Privacy Policy</a></li>
+                    </ul>
+                </nav>
+            </div>
+        </footer>
+    </div>
+
 </body>
 
 </html>
