color corrections +formatting

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <header class="site-header">
             <div class="container">
                 <div class="logo">
-                    <img id="logo-image" src="images\logo.png" alt="Robin Galeazzi Logo">
+                    <img id="logo-image" src="images\FFBD39.png" alt="Robin Galeazzi Logo">
                 </div>
                 <nav>
                     <ul>
@@ -32,12 +32,13 @@
                     <div id="custom-text">
                         I'm a <span class="job-title">Solution Engineer</span> based in Switzerland
                     </div>
-                    <button class="button hire-me">Hire Me</button>
-                    <button class="button my-works">My Works</button>
+                    <div class="buttons-container">
+                        <button class="button hire-me">Hire Me</button>
+                        <button class="button my-works">My Works</button>
+                    </div>  
                 </div>
                 <img id="profile-image" src="images/foto.png" alt="Robin Galeazzi">
             </div>
         </div>
-    </div>
 </body>
 </html>
