Colors, Formatting, Image edited, AboutMe Page

--- a/index.html
+++ b/index.html
@@ -37,8 +37,26 @@
                         <button class="button my-works">My Works</button>
                     </div>  
                 </div>
-                <img id="profile-image" src="images/foto.png" alt="Robin Galeazzi">
+                <img id="profile-image" src="images/orange.png" alt="Robin Galeazzi">
             </div>
         </div>
+        <section class="about-me">
+            <div class="container">
+                <div class="about-me-content">
+                    <h2>About Me</h2>
+                    <div class="about-details">
+                        <p>Name: Robin Galeazzi</p>
+                        <p>Date of Birth: [Your Date of Birth]</p>
+                        <p>Address: [Your Address]</p>
+                        <p>Zip Code: [Your Zip Code]</p>
+                        <p>Email: [Your Email]</p>
+                        <p>Phone: [Your Phone Number]</p>
+                    </div>
+                    <div class="about-image">
+                        <img src="images/about-me.png" alt="Robin Galeazzi">
+                    </div>
+                </div>
+            </div>
+        </section>
 </body>
 </html>
