--- a/index.html
+++ b/index.html
@@ -29,8 +29,16 @@
         <div class="main-content">
             <div class="container">
                 <div class="text-container">
-                    <div id="custom-text">
-                        I'm a <span class="job-title">Solution Engineer</span> based in Switzerland
+                    <div class="hello-text">HELLO!</div>
+                    <div class="text-container text-container-1">
+                        <div id="custom-text">
+                            I'm a <span class="job-title">Solution Engineer</span> based in Switzerland
+                        </div>
+                    </div>
+                    <div class="text-container text-container-2">
+                        <div id="alternate-text">
+                            [Ihr alternativer Text hier]
+                        </div>
                     </div>
                     <div class="buttons-container">
                         <button class="button hire-me">Hire Me</button>
@@ -40,7 +48,7 @@
                 <img id="profile-image" src="images/orange.png" alt="Robin Galeazzi">
             </div>
         </div>
-        <section class="about-me">
+        <section class="about-me">sde
             <div class="container">
                 <div class="about-me-content">
                     <h2>About Me</h2>
@@ -53,10 +61,11 @@
                         <p>Phone: [Your Phone Number]</p>
                     </div>
                     <div class="about-image">
-                        <img src="images/about-me.png" alt="Robin Galeazzi">
+                        <img src="images/" alt="Robin Galeazzi">
                     </div>
                 </div>
             </div>
         </section>
+        <script src="scripts.js"></script>
 </body>
 </html>
