Animation + Text Changed, Added new Page

--- a/index.html
+++ b/index.html
@@ -30,16 +30,17 @@
             <div class="container">
                 <div class="text-container">
                     <div class="hello-text">HELLO!</div>
-                    <div class="text-container text-container-1">
+                    <div class="text-container-title" id="text1">
                         <div id="custom-text">
                             I'm a <span class="job-title">Solution Engineer</span> based in Switzerland
                         </div>
                     </div>
-                    <div class="text-container text-container-2">
-                        <div id="alternate-text">
-                            [Ihr alternativer Text hier]
-                        </div>
+                    <div class="text-container-title"id="text2">
+                            My name is <span class="job-title">Robin Galeazzi</span>
+                            <h1>A Solution Engineer</h1>
                     </div>
+                    
+                
                     <div class="buttons-container">
                         <button class="button hire-me">Hire Me</button>
                         <button class="button my-works">My Works</button>
@@ -66,6 +67,6 @@
                 </div>
             </div>
         </section>
-        <script src="scripts.js"></script>
+    <script src="scripts.js"></script>
 </body>
 </html>
