Added Projects and Contact page, and updated about me Page

--- a/index.html
+++ b/index.html
@@ -49,21 +49,91 @@
                 <img id="profile-image" src="images/orange.png" alt="Robin Galeazzi">
             </div>
         </div>
-        <section class="about-me">sde
-            <div class="container">
-                <div class="about-me-content">
-                    <h2>About Me</h2>
-                    <div class="about-details">
-                        <p>Name: Robin Galeazzi</p>
-                        <p>Date of Birth: [Your Date of Birth]</p>
-                        <p>Address: [Your Address]</p>
-                        <p>Zip Code: [Your Zip Code]</p>
-                        <p>Email: [Your Email]</p>
-                        <p>Phone: [Your Phone Number]</p>
+        <section class="about-me">
+            <div class="container2">
+                <div class="title-container">
+                    <h1>About me</h1>
+                    <h3>"Choose a job you love, and you will never have to work a day in your life."- Confucius</h3>
+                </div>
+                <ul>
+                    <li>Hi, i'm Robin Galeazzi!</li>
+                    <li>Date of Birth: 17.02.1994</li>
+                    <li>Address: Thunstrasse 52, 3110 Münsingen</li>
+                    <li>Email: robin.galeazzi@students.bfh.ch</li>
+                    <li>Hobbys: Family, GPU Mining, Gaming</li>
+                    <li>Phone: 123 123 12 12</li>
+                </ul>
+            </div>
+            <section class="skills-section">
+                <div class="container">
+                    <div class="skills">
+                        <div class="skill">
+                            <div class="skill-name">Photoshop</div>
+                            <div class="skill-bar">
+                                <div class="skill-percentage" style="width: 90%;"></div>
+                            </div>
+                           <div class="skill-percent">90%</div>
+                        </div>
+                        <div class="skill">
+                            <div class="skill-name">JAVA</div>
+                            <div class="skill-bar">
+                                <div class="skill-percentage" style="width: 50%;"></div>
+                            </div>
+                            <div class="skill-percent">50%</div>
+                        </div>
+                        <!-- Weitere Skills hier -->
                     </div>
-                    <div class="about-image">
-                        <img src="images/" alt="Robin Galeazzi">
+                </div>
+            </section>
+        </section>
+        <section class="projects">
+            <div class="container2">
+                <div class="title-container">
+                    <h1>Projects</h1>
+                    <h3>"Choose a job you love, and you will never have to work a day in your life."- Confucius</h3>
+                </div>
+                <div class="row">
+                    <div class="collum">
+                        <div class="block">
+                            <span class="date">2014-2015</span>
+                            <h2>Bachelor Business Information Technology</h2>
+                            <span class="position">BFH</span>
+                            <p class="desc-block">
+                                Choose a job you love, and you will never have to work a day in your life."- Confucius                            </p>
+                        </div>
+                        <div class="block">
+                            <span class="date">2014-2015</span>
+                            <h2>Bachelor Business Information Technology</h2>
+                            <span class="position">BFH</span>
+                            <p class="desc-block">
+                                Choose a job you love, and you will never have to work a day in your life."- Confucius                            </p>
+                        </div>
                     </div>
+                    <div class="collum">
+                        <div class="block">
+                            <span class="date">2014-2015</span>
+                            <h2>Bachelor Business Information Technology</h2>
+                            <span class="position">BFH</span>
+                            <p class="desc-block">
+                                Choose a job you love, and you will never have to work a day in your life."- Confucius                            </p>
+                        </div>
+                        <div class="block">
+                            <span class="date">2014-2015</span>
+                            <h2>Bachelor Business Information Technology</h2>
+                            <span class="position">BFH</span>
+                            <p class="desc-block">
+                                Choose a job you love, and you will never have to work a day in your life."- Confucius                            </p>
+                        </div>
+                    </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="contact-me">
+            <div class="container2">
+                <div class="title-container">
+                    <h1>Contact me</h1>
+                    <h3>"Choose a job you love, and you will never have to work a day in your life."- Confucius</h3>
                 </div>
             </div>
         </section>
