About me page updated with skill bar

--- a/index.html
+++ b/index.html
@@ -50,38 +50,65 @@
             </div>
         </div>
         <section class="about-me">
-            <div class="container2">
+            <div class="container3">
                 <div class="title-container">
                     <h1>About me</h1>
                     <h3>"Choose a job you love, and you will never have to work a day in your life."- Confucius</h3>
                 </div>
                 <ul>
-                    <li>Hi, i'm Robin Galeazzi!</li>
-                    <li>Date of Birth: 17.02.1994</li>
-                    <li>Address: Thunstrasse 52, 3110 Münsingen</li>
-                    <li>Email: robin.galeazzi@students.bfh.ch</li>
-                    <li>Hobbys: Family, GPU Mining, Gaming</li>
-                    <li>Phone: 123 123 12 12</li>
-                </ul>
+                    <li data-label="Date of Birth:">17.02.1994</li>
+                    <li data-label="Address:">Thunstrasse 52, 3110 Münsingen</li>
+                    <li data-label="Email:">robin.galeazzi@students.bfh.ch</li>
+                    <li data-label="Hobbys:">Family, GPU Mining, Gaming</li>
+                    <li data-label="Phone:">123 123 12 12</li>
+                </ul>                
             </div>
             <section class="skills-section">
-                <div class="container">
+                <div class="container3">
                     <div class="skills">
                         <div class="skill">
-                            <div class="skill-name">Photoshop</div>
+                            <div class="skill-name">After Effects</div>
                             <div class="skill-bar">
-                                <div class="skill-percentage" style="width: 90%;"></div>
+                                <div class="skill-percentage" data-percentage="90%"></div>                                    
+                                <div class="skill-percent">90%</div>
                             </div>
-                           <div class="skill-percent">90%</div>
+                        </div>
+                    
+                        <div class="skill">
+                            <div class="skill-name">Java</div>
+                                <div class="skill-bar">
+                                    <div class="skill-percentage" data-percentage="50%"></div>                                     
+                                    <div class="skill-percent">50%</div>
+                                </div>
                         </div>
                         <div class="skill">
-                            <div class="skill-name">JAVA</div>
+                            <div class="skill-name">Python</div>
                             <div class="skill-bar">
-                                <div class="skill-percentage" style="width: 50%;"></div>
+                                <div class="skill-percentage" data-percentage="70%"></div>                                    
+                                <div class="skill-percent">70%</div>
                             </div>
-                            <div class="skill-percent">50%</div>
                         </div>
-                        <!-- Weitere Skills hier -->
+                        <div class="skill">
+                            <div class="skill-name">SQL</div>
+                            <div class="skill-bar">
+                                <div class="skill-percentage" data-percentage="80%"></div>                                     
+                                <div class="skill-percent">80%</div>
+                            </div>
+                        </div>
+                        <div class="skill">
+                            <div class="skill-name">CSS</div>
+                            <div class="skill-bar">
+                                <div class="skill-percentage" data-percentage="19%"></div>                                    
+                                <div class="skill-percent">19%</div>
+                            </div>
+                        </div>
+                        <div class="skill">
+                            <div class="skill-name">HTML</div>
+                            <div class="skill-bar">
+                                <div class="skill-percentage" data-percentage="100%"></div>                                     
+                                <div class="skill-percent">300%</div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </section>
@@ -127,7 +154,6 @@
                     </div>
                     </div>
                 </div>
-            </div>
         </section>
         <section class="contact-me">
             <div class="container2">
@@ -137,6 +163,7 @@
                 </div>
             </div>
         </section>
+    </div>
     <script src="scripts.js"></script>
 </body>
 </html>
