Responsive designe adjusted

--- a/index.html
+++ b/index.html
@@ -15,6 +15,11 @@
                 <div class="logo">
                     <img id="logo-image" data-image="logo" src="images/FFBD39.png" alt="Robin Galeazzi Logo">                </div>
                 <nav>
+                    <div class="burger-menu">
+                        <div class="line1"></div>
+                        <div class="line2"></div>
+                        <div class="line3"></div>
+                    </div>
                     <ul>
                         <li><a href="#">Home</a></li>
                         <li><a href="#about-me">About</a></li>
@@ -29,7 +34,7 @@
         <div class="main-content">
             <div class="container">
                 <div class="text-container">
-                    <div class="hello-text dynamic-colorx">HELLO!</div>
+                    <div class="hello-text dynamic-color">HELLO!</div>
                     <div class="text-container-title" id="text1">
                         <div id="custom-text">
                             I'm a <span class="job-title">Solution Engineer</span> based in Switzerland
@@ -42,11 +47,12 @@
                     
                 
                     <div class="buttons-container">
-                        <button class="button hire-me">Hire Me</button>
+                        <button class="button hire-me">Change</button>
                         <button class="button my-works">My Works</button>
                     </div>  
                 </div>
-                <img id="profile-image" data-image="profile" src="images/orange.png" alt="Robin Galeazzi">            </div>
+                <img id="profile-image" data-image="profile" src="images/orange.png" alt="Robin Galeazzi">            
+            </div>
         </div>
         <section class="about-me section" id="about-me">
             <div class="container3">
